# rag-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
fau_rag_opt/Experiments/: 02_label_encoding.ipynb  03_baseline_classifier.ipynb  04_semantic_base.ipynb  04_semantic_mlp.ipynb  04_semantic_xgb.ipynb  ahr_alpha_regressor.joblib  benchmark_analysis.py  benchmark_analysis_viz.py  final_benchmark_demo.py  qualitative_analysis.py  qualitative_eval_app.py  qualitative_eval_results.csv  retrieval_level_analysis.py  retrieval_level_analysis_viz.py  retrieval_level_summary.md
fau_rag_opt/config/: config.yaml
fau_rag_opt/constants/: __init__.py  my_constants.py
fau_rag_opt/helpers/: encode_worker.py  exception.py  labelling.py  loader.py  merger.py  rate_limiter.py  sanity_check.py  utils.py
fau_rag_opt/knowledgebase/: ahr_training_data.csv  categorized_queries.jsonl
fau_rag_opt/mcp/: __init__.py  mcp_multi_tool_ahr_pipeline.py  query_classification_tool.py  query_expansion_tool.py  reranker_tool.py  reranker_worker.py  self_querying_tool.py
fau_rag_opt/query_classifier/: ahr_training_data_generator.py  baseline_classifier.py  classifier_one.py  dataset_categorization.py  dataset_extractor.py  eval_answer_quality.py  hybrid_extractor.py  hybrid_weight_regressor.py  hybrid_weight_regressor_xg.py  labeler_config.py  llm_labeler.py  llm_response.py  query_auto_labeler.py  query_labeler.py  query_sampler.py  retrieval_benchmark.py  semantic_classifier.py  (+1 more)
tests/: pytest.ini  test_dense_retrieval.py  test_hybrid_retrieval.py  test_sparse_retrieval.py
(+10 files in other folders)
