[project]
name = "rag-optimizer"
version = "0.1.0"
description = "A Python package for adaptive hybrid retrieval and optimization in Retrieval-Augmented Generation systems."
authors = [
    { name = "Omar", email = "omarklotfy@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["rag_optimizer"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]